--- a/LogFit/nbproject/project.properties
+++ b/LogFit/nbproject/project.properties
@@ -35,7 +35,6 @@ dist.jlink.output=${dist.jlink.dir}/LogFit
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +70,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=LogFit
-main.class=LogFit
+main.class=Intro
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
