--- a/LogFit/nbproject/project.properties
+++ b/LogFit/nbproject/project.properties
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=LogFit
-main.class=Intro
+main.class=Telas.Intro
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
