Conexão com o banco #01

--- a/LogFit/nbproject/project.properties
+++ b/LogFit/nbproject/project.properties
@@ -33,8 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/LogFit
 excludes=
+file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\user\\Desktop\\Cursos\\Faculdade\\Programa\u00e7\u00e3o em java\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
+javac.classpath=\
+    ${file.reference.mysql-connector-j-8.0.32.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
