--- a/LogFit/nbproject/project.properties
+++ b/LogFit/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\user\\Desktop\\Cursos\\Fa
 includes=**
 jar.compress=false
 javac.classpath=\
-# Space-separated list of extra javac options
+    \# Space-separated list of extra javac options:\
+    ${file.reference.mysql-connector-j-8.0.32.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
