--- a/LogFit/nbproject/project.properties
+++ b/LogFit/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/LogFit
 excludes=
 file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\user\\Desktop\\Cursos\\Faculdade\\Programa\u00e7\u00e3o em java\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
+file.reference.mysql-connector-j-8.0.32.jar-1=..\\..\\..\\Conector_MySQL\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     \# Space-separated list of extra javac options:\
-    ${file.reference.mysql-connector-j-8.0.32.jar}
+    ${file.reference.mysql-connector-j-8.0.32.jar}:\
+    ${file.reference.mysql-connector-j-8.0.32.jar-1}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
