--- a/LogFit/nbproject/project.properties
+++ b/LogFit/nbproject/project.properties
@@ -65,6 +65,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.mysql-connector-j-8.0.32.jar-1=C:\\Users\\luiri\\Downloads\\Conector_MySQL\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
