--- a/LogFit/nbproject/project.properties
+++ b/LogFit/nbproject/project.properties
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=LogFit
-main.class=Telas.Intro
+main.class=Telas.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
