--- a/LogFit/nbproject/project.properties
+++ b/LogFit/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=LogFit
+application.vendor=Victor
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,15 +33,13 @@ dist.jar=${dist.dir}/LogFit.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/LogFit
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\user\\Desktop\\Cursos\\Faculdade\\Programa\u00e7\u00e3o em java\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
-file.reference.mysql-connector-j-8.0.32.jar-1=..\\..\\..\\Conector_MySQL\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
+file.reference.mysql-connector-j-8.0.32.jar-2=C:\\Users\\Pichau\\Documents\\Uninove\\1\u00ba Semestre - 2023\\Modelagem e Desenvolvimento Orientado a Objetos\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    \# Space-separated list of extra javac options:\
-    ${file.reference.mysql-connector-j-8.0.32.jar}:\
-    ${file.reference.mysql-connector-j-8.0.32.jar-1}
+    ${file.reference.mysql-connector-j-8.0.32.jar-2}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
@@ -65,7 +64,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.mysql-connector-j-8.0.32.jar-1=C:\\Users\\luiri\\Downloads\\Conector_MySQL\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
